# mylabs

./: CMakeLists.txt  main.cpp
tasks/task0/include/: Box.h  BoxService.h  Container.h
tasks/task0/src/: Container.cpp
tasks/task1/include/: DynamicArray.h
tasks/task1/src/: DynamicArray.cpp
tasks/task2/: Queue.h
tasks/task2/include/: Iterator.h  Queue.h
tasks/task2/src/: Iterator.cpp
tasks/task3/include/: AbstractIterator.cpp  AbstractIterator.h  AbstractList.cpp  AbstractList.h  List.cpp  List.h
tests/include/: TestTask0.h
tests/include/task2/: TestIterator.h  TestQueue.h  TestTask2.h
tests/src/: TestTask0.cpp  TestTask1.cpp
tests/src/task2/: TestIterator.cpp  TestQueue.cpp  TestTask2.cpp
tests/task0/: TestTask0.cpp
tests/task1/: TestTask1.cpp  TestTask1.h
tests/task2/: TestQueue.cpp  TestQueue.h  TestTask2.cpp  TestTask2.h
